@@ -1,6 +1,6 @@
 /* output-sk.c - output in sketch format
 
-   Copyright (C) 1999, 2000, 2001 Bernhard Herzog
+   Copyright (C) 1999, 2000, 2001, 2003 Bernhard Herzog
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public License
@@ -22,7 +22,6 @@
 #endif /* Def: HAVE_CONFIG_H */
 
 #include "spline.h"
-#include "color.h"
 #include "output-sk.h"
 
 static void
@@ -31,37 +30,38 @@ out_splines (FILE * file, spline_list_array_type shape)
   unsigned this_list;
   spline_list_type list;
   
-  color_type last_color = {0,0,0};
-
   for (this_list = 0; this_list < SPLINE_LIST_ARRAY_LENGTH (shape);
     this_list++)
     {
       unsigned this_spline;
       spline_type first;
+      /* Whether to fill or stroke */
+      at_bool stroke;
 
       list = SPLINE_LIST_ARRAY_ELT (shape, this_list);
       first = SPLINE_LIST_ELT (list, 0);
 
-      if (this_list == 0 || !COLOR_EQUAL(list.color, last_color))
-        {
-          if (this_list > 0 && !shape.centerline)
-            fputs("bC()\n", file);
-          fprintf(file, (shape.centerline || list.open) ? "lp((%g,%g,%g))\n"
-            : "fp((%g,%g,%g))\n", list.color.r / 255.0,
-            list.color.g / 255.0, list.color.b / 255.0); 
-          fputs((shape.centerline || list.open) ? "fe()\n" : "le()\n", file); /* no outline */
-            last_color = list.color;
-          fputs("b()\n", file); /* the beginning of a bezier object */
-	    }
-    
+      stroke = shape.centerline || list.open;
+ 
+      /* If stroke, set outline color and no fill, otherwise set fill
+       * color and no outline */
+      fprintf(file, "%s((%g,%g,%g))\n", stroke ? "lp" : "fp",
+        list.color.r / 255.0, list.color.g / 255.0,
+        list.color.b / 255.0);
+      fputs(stroke ? "fe()\n" : "le()\n", file);
+ 
+      /* Start a bezier object */
+      fputs("b()\n", file);
+ 
+      /* Move to the start point */
       fprintf(file, "bs(%g,%g,0)\n",
         START_POINT(first).x, START_POINT(first).y);
-
+  
+      /* write the splines */
       for (this_spline = 0; this_spline < SPLINE_LIST_LENGTH (list);
-	     this_spline++)
+        this_spline++)
         {
           spline_type s = SPLINE_LIST_ELT (list, this_spline);
-
           if (SPLINE_DEGREE(s) == LINEARTYPE)
             fprintf(file, "bs(%g,%g,0)\n", END_POINT(s).x, END_POINT(s).y);
           else
@@ -70,9 +70,12 @@ out_splines (FILE * file, spline_list_array_type shape)
               CONTROL2(s).x, CONTROL2(s).y,
               END_POINT(s).x, END_POINT(s).y);
         }
+ 
+      /* End the bezier object. If it's stroked do nothing otherwise
+         close the path. */
+      if (!stroke)
+        fputs("bC()\n", file);
     }
-  if (SPLINE_LIST_ARRAY_LENGTH(shape) > 0 && !shape.centerline)
-	  fputs("bC()\n", file);
 }
 
 
